fix wrong padding axis in container

--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -1,5 +1,5 @@
 .container {
   margin: 0 auto;
   max-width: r(960);
-  padding: r(8) 0;
+  padding: 0 r(8);
 }
